fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC4001MediaRule.dsl
test 1 mediaEvent:
    2019/01/24 00:12:34:
        mediaEvent:
            media: "YSS"
            accountId: 4001001
            adId: 4020001
            adName: "adName40041"
            approvalStatus: "承認済み"